--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,9 @@
 # .idea/artifacts
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
+.idea/modules.xml
+.idea/vcs.xml
+.idea/*.iml
 # *.iml
 # *.ipr
 
@@ -189,4 +189,3 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-
