--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,23 +2,6 @@
   "name": "pattern",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@types/jest": "^24.9.1",
-    "@types/node": "^13.7.0",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.8",
-    "history": "^5.0.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "sass": "^1.26.10",
-    "sass-loader": "^8.0.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,12 +23,29 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "devDependencies": {
+    "@types/jest": "^24.9.1",
+    "@types/node": "^13.7.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react-redux": "^7.1.9",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "history": "^5.0.0",
+    "node-sass": "^4.14.1",
+    "react-redux": "^7.2.1",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "sass": "^1.26.10",
+    "sass-loader": "^8.0.2"
   }
 }
