--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,20 +32,18 @@
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "@types/react-redux": "^7.1.9",
-    "tslint": "^6.1.3",
-    "typescript": "^3.9.7",
     "history": "^5.0.0",
     "node-sass": "^4.14.1",
+    "classnames": "^2.2.6",
     "react-redux": "^7.2.1",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "sass": "^1.26.10",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   }
 }
