--- a/backend/package.json
+++ b/backend/package.json
@@ -12,22 +12,30 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest test",
+    "test:watch": "jest --watch ./test",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "7.1.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "bcrypt": "^5.0.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "mongoose": "5.10.0",
+    "mongodb": "^3.6.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
@@ -35,11 +43,14 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
+    "@types/hapi__joi": "^17.1.4",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "jest": "26.0.1",
+    "rimraf": "^3.0.2",
+    "mongodb-memory-server": "^6.6.7",
     "passport-jwt": "^4.0.0",
     "supertest": "^4.0.2",
     "ts-jest": "26.1.0",
@@ -55,7 +66,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": "test",
     "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
