--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "class-transformer": "^0.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -35,9 +36,9 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "classnames": "^2.2.6",
     "history": "^5.0.0",
     "node-sass": "^4.14.1",
-    "classnames": "^2.2.6",
     "react-redux": "^7.2.1",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
