--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,8 @@
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
     "@types/passport-local": "^1.0.33",
+    "@types/mongodb": "^3.5.27",
+    "@types/mongodb-memory-server": "^2.3.0",
     "@types/supertest": "^2.0.8",
     "jest": "26.0.1",
     "rimraf": "^3.0.2",
